--- a/app/src/main/res/layout/admob_small_native_ad_hctr_btn_bottom.xml
+++ b/app/src/main/res/layout/admob_small_native_ad_hctr_btn_bottom.xml
@@ -18,14 +18,14 @@
             android:layout_height="wrap_content"
             android:background="@drawable/bg_cl_remove_ads"
             android:backgroundTint="@color/accent"
-            android:paddingHorizontal="@dimen/padding"
-            android:paddingVertical="@dimen/_2sdp"
+            android:paddingHorizontal="@dimen/less_padding"
+            android:paddingVertical="@dimen/_1sdp"
             android:fontFamily="@font/poppins_regular"
-            android:text="AD"
+            android:text="Ad"
+            android:textSize="10sp"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/top"
